# XtalTransforms

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clean.sh  compile.sh
data/: build_2y2a_stack.inp  build_2y2a_super.inp  build_2y2a_unit.inp  build_4oph_super.inp  build_4oph_unit.inp  out_build_2y2a_stack.out  out_build_2y2a_super.out  out_build_2y2a_unit.out  out_build_4oph_unit.out  view_2y2a_stack.vmd  view_2y2a_super.vmd  view_2y2a_unit.vmd  view_4oph_super.vmd  view_4oph_unit.vmd
include/: Atom.hpp  XtalTransformer.hpp
src/: Atom.cpp  CMakeLists.txt  XtalTransformer.cpp
test/: CMakeLists.txt  Transform.cpp  Transform_2Y2A.cpp  Transform_4OPH.cpp
